force-app/main/default/objects/User/fields/Dispenser_Read_Edit__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Read_Edit__c</fullName>
    <label>Dispenser Read/Edit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>