force-app/main/default/objects/User/fields/FS_KO_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_KO_ID__c</fullName>
    <description>Field added 10/14/13 by H.Whitacre to support storage of Coke KO-ID for each user.</description>
    <externalId>true</externalId>
    <label>KO-ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>