force-app/main/default/objects/User/fields/FS_Market_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Market_ID__c</fullName>
    <label>Market ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>