force-app/main/default/objects/User/fields/FS_Migration_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Migration_Ext_ID__c</fullName>
    <description>Field created by H.Whitacre 9/19/13 for Data Migration. This field will be used as a unique external-id while migrating User records. THIS FIELD CAN BE DELETED AFTER GO-LIVE WHENEVER WE ARE FINISHED WITH MIGRATION.</description>
    <externalId>true</externalId>
    <inlineHelpText>DATA MIGRATION ONLY! - Unique external id for use while migrating users.</inlineHelpText>
    <label>Migration Ext ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>