force-app/main/default/objects/User/fields/FS_Migration_Tag__c.field-meta.xml
<CustomField>
    <fullName>FS_Migration_Tag__c</fullName>
    <description>Field created 9/19/13 by H.Whitacre for data migration.  This field will be used for casual tagging of misc information while migrating User records. THIS FIELD CAN BE DELETED AFTER GO-LIVE WHENEVER THE DATA MIGRATION IS FINISHED.</description>
    <inlineHelpText>DATA MIGRATION ONLY! Used for storing misc info during data migration.</inlineHelpText>
    <label>Migration Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>