force-app/main/default/objects/User/fields/FS_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>FS_Permission_Sets__c</fullName>
    <label>Permission Sets</label>
    <type>TextArea</type>
</CustomField>