force-app/main/default/objects/User/fields/IC_Code__c.field-meta.xml
<CustomField>
    <fullName>IC_Code__c</fullName>
    <label>IC Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1795457</fullName>
            </value>
            <value>
                <fullName>1795458</fullName>
            </value>
            <value>
                <fullName>1795459</fullName>
            </value>
            <value>
                <fullName>1795460</fullName>
            </value>
            <value>
                <fullName>1700710</fullName>
            </value>
            <value>
                <fullName>1700711</fullName>
            </value>
            <value>
                <fullName>1700712</fullName>
            </value>
            <value>
                <fullName>1700713</fullName>
            </value>
            <value>
                <fullName>1700714</fullName>
            </value>
            <value>
                <fullName>1700715</fullName>
            </value>
            <value>
                <fullName>1700716</fullName>
            </value>
            <value>
                <fullName>1700717</fullName>
            </value>
            <value>
                <fullName>1700718</fullName>
            </value>
            <value>
                <fullName>1700719</fullName>
            </value>
            <value>
                <fullName>1700720</fullName>
            </value>
            <value>
                <fullName>1700721</fullName>
            </value>
            <value>
                <fullName>1702648</fullName>
            </value>
            <value>
                <fullName>46100</fullName>
            </value>
            <value>
                <fullName>46101</fullName>
            </value>
            <value>
                <fullName>46099</fullName>
            </value>
            <value>
                <fullName>46127</fullName>
            </value>
            <value>
                <fullName>46128</fullName>
            </value>
            <value>
                <fullName>46126</fullName>
            </value>
            <value>
                <fullName>46102</fullName>
            </value>
            <value>
                <fullName>46129</fullName>
            </value>
            <value>
                <fullName>46401</fullName>
            </value>
            <value>
                <fullName>46379</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>