force-app/main/default/objects/User/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <description>Distinguishes between Salesforce and Salesforce Platform licenses</description>
    <formula>Profile.UserLicense.Name</formula>
    <label>LicenseType</label>
    <type>Text</type>
</CustomField>