force-app/main/default/objects/User/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <inlineHelpText>Please select only 1 option.</inlineHelpText>
    <label>Ownership (Choose One)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Ownership_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Coca-Cola Refreshments Canada</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Enterprises</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Erfrischungsgetraenke AG</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Singapore Beverages</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Amatil Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>