force-app/main/default/objects/User/fields/Related_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Related_Permission_Set__c</fullName>
    <label>Related Permission Set</label>
    <length>40</length>
    <type>Text</type>
</CustomField>