force-app/main/default/objects/User/fields/SE_Level1user__c.field-meta.xml
<CustomField>
    <fullName>SE_Level1user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to use in validation rule for enahncement1</description>
    <label>Level1user</label>
    <type>Checkbox</type>
</CustomField>