force-app/main/default/objects/User/fields/SE_Level2user__c.field-meta.xml
<CustomField>
    <fullName>SE_Level2user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>level 2 users</description>
    <label>Level2user</label>
    <type>Checkbox</type>
</CustomField>