force-app/main/default/objects/User/fields/SE_Level3user__c.field-meta.xml
<CustomField>
    <fullName>SE_Level3user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>level 3 users</description>
    <label>Level3user</label>
    <type>Checkbox</type>
</CustomField>