force-app/main/default/objects/User/validationRules/DispenserCountryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DispenserCountryRequired</fullName>
    <active>true</active>
    <description>While creating a User with Dispenser Coordinator profile, Dispenser Country field is required.</description>
    <errorConditionFormula>AND
(
Profile.Name = &#39;FET Dispenser Coorindator Profile&#39;,
ISBLANK(Dispenser_Country__c )
)</errorConditionFormula>
    <errorDisplayField>Dispenser_Country__c</errorDisplayField>
    <errorMessage>Please enter a value.</errorMessage>
</ValidationRule>