force-app/main/default/objects/User/validationRules/DispenserReadEditRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DispenserReadEditRequired</fullName>
    <active>true</active>
    <description>While creating a User with Dispenser Coordinator profile, Dispenser Read/Edit field is required.</description>
    <errorConditionFormula>AND
(
Profile.Name = &#39;FET Dispenser Coorindator Profile&#39;,
ISPICKVAL(Dispenser_Read_Edit__c , &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Dispenser_Read_Edit__c</errorDisplayField>
    <errorMessage>Please enter a value.</errorMessage>
</ValidationRule>