force-app/main/default/objects/User/validationRules/OwnershipRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnershipRequired</fullName>
    <active>true</active>
    <description>While creating a User with Dispenser Coordinator profile, Ownership field is required.</description>
    <errorConditionFormula>AND
(
Profile.Name = &#39;FET Dispenser Coorindator Profile&#39;,
ISPICKVAL(Ownership_Type__c, &#39;Bottler&#39;), ISBLANK( Ownership__c )
)</errorConditionFormula>
    <errorDisplayField>Ownership__c</errorDisplayField>
    <errorMessage>Please enter a value.</errorMessage>
</ValidationRule>