force-app/main/default/objects/User/validationRules/OwnershipTypeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnershipTypeRequired</fullName>
    <active>true</active>
    <description>While creating a User with Dispenser Coordinator profile, Ownership Type field is required.</description>
    <errorConditionFormula>AND
(
Profile.Name = &#39;FET Dispenser Coorindator Profile&#39;,
ISPICKVAL(Ownership_Type__c , &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Ownership_Type__c</errorDisplayField>
    <errorMessage>Please enter a value.</errorMessage>
</ValidationRule>