force-app/main/default/objects/User/listViews/Community_Plus_Service_Escalation_Users.listView-meta.xml
<ListView>
    <fullName>Community_Plus_Service_Escalation_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Service Escalation Community Plus</value>
    </filters>
    <label>Community Plus Service Escalation Users</label>
</ListView>