force-app/main/default/objects/User/listViews/Community_Users_Specific_User.listView-meta.xml
<ListView>
    <fullName>Community_Users_Specific_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Community</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>contains</operation>
        <value>maples</value>
    </filters>
    <label>Community Users Specific User</label>
</ListView>