force-app/main/default/objects/User/listViews/EMT_FET_International_Access_Agents.listView-meta.xml
<ListView>
    <fullName>EMT_FET_International_Access_Agents</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>FET SE Manufacturer Profile</value>
    </filters>
    <label>EMT-FET International Access Agents</label>
    <sharedTo>
        <group>Freestyle_Support_Agents</group>
    </sharedTo>
</ListView>