force-app/main/default/objects/User/listViews/FS_Users_with_eMail.listView-meta.xml
<ListView>
    <fullName>FS_Users_with_eMail</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>FS</value>
    </filters>
    <label>FS Users with eMail</label>
</ListView>